fourth commit: added media querry

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <div id="buttons">
         <div class="row">
           <div class="btn" id="clear">C</div>
-          <div class="btn operator" id="**"><sup>^</sup></div>
+          <div class="btn operator" id="**">^</div>
           <div class="btn operator" id="%">%</div>
           <div class="btn operator" id="/">&divide;</div>
         </div>
